vcs/specs/parser/fail/expressions/invalid_null_coalesce.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, null-coalesce, error
// @description: Null coalesce operator without operands
// @expected-error: E018

fn test() {
    let x = ?? default;  // Missing left operand
}
